RESOLVED FIXED168000
Simple line layout: Fix printReason for unsupported overflow values.
https://bugs.webkit.org/show_bug.cgi?id=168000
Summary Simple line layout: Fix printReason for unsupported overflow values.
alan
Reported 2017-02-08 09:47:58 PST
It says we don't support overflow visible, but we do.
Attachments
Patch (2.75 KB, patch)
2017-02-08 09:49 PST, alan
no flags
Patch (2.72 KB, patch)
2017-02-08 09:57 PST, alan
no flags
alan
Comment 1 2017-02-08 09:49:52 PST
Simon Fraser (smfr)
Comment 2 2017-02-08 09:51:41 PST
Comment on attachment 300914 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=300914&action=review > Source/WebCore/rendering/SimpleLineLayout.cpp:79 > + FlowHasNoOverflowVisible = 1LLU << 13, Maybe call this FlowHasOverflowNotVisible ?
alan
Comment 3 2017-02-08 09:57:45 PST
WebKit Commit Bot
Comment 4 2017-02-08 10:35:19 PST
Comment on attachment 300915 [details] Patch Clearing flags on attachment: 300915 Committed r211884: <http://trac.webkit.org/changeset/211884>
WebKit Commit Bot
Comment 5 2017-02-08 10:35:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.