Simple line layout: Fix printReason for unsupported overflow values. https://bugs.webkit.org/show_bug.cgi?id=168000

Reviewed by Simon Fraser.

Not testable.

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::canUseForStyle):
(WebCore::SimpleLineLayout::printReason):


Canonical link: https://commits.webkit.org/185024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211884 268f45cc-cd09-0410-ab3c-d52691b4dbfc